# shionn

./: .clang-format  .gitignore  404.html  Cargo.toml  README.md  book.toml  build.rs  config.toml  index.html  print.html  rustfmt.toml  searchindex.js  toc.html  toc.js
.github/workflows/: ci.yml  deploy.yml  mdbook.yml  release.yml
docs/: ASa Project  Font  HARUKAZE  HULOTTE ROI  Hulotte  Madosoft  SUMMARY.md  SiglusEngine.md  Tool.md  index.readme.md  readme  shionn_everything.md  supported.md  unless2.md  vndb.http  ypf.md
docs/unless/: CRYSTALiA  HARUKAZE  NEKO WORKs  Uguisu Kagura
docs/useless/: ASa Project  NanaWind  Orthros
docs/useless-asm/: asm.S  asm.c  asm_.rs  readme.md  vs2022_pure_asm_project_guide_cn.md  x86-64 _Cheat Sheet_ Summary.md  x86_64_registers.md
docs/useless2/: note
docs/ypf/: 1.md
examples/: alma_pak.rs  amuse_pac.rs  anim_dat.rs  arc_bgi.rs  artemis_pfs.rs  dame-pcm-view.py  dame-playback.cpp  dame.ana  dame.flac  dame.md  dame.pcm  extract_ext.rs  kirikiri_xp3.rs  pac.rs  pac_amuse.rs  pfs.rs  time.rs  vndb.rs  ypf.rs  yuka_ykc.rs
src/: alicesoft.afa.rs  alma.pak.rs  amuse.pac.rs  anim.dat.rs  anim.eog.rs  anim.gax.rs  anim.pck.rs  arc.rs  arc_bgi.rs  artemis.pfs.rs  asf.rs  avif.rs  bgi.arc.rs  bgi.bg.rs  bgi.dsc.rs  bin.rs  bishop.bsa.rs  bmp.rs  candysoft.fpk.rs  candysoft.kg.rs  circus.pcm.rs  escude.bin.rs  exe.rs  favorite.bin.rs  favorite.hzc.rs  gesen18.scs.rs  gesen18.voi.rs  icc.rs  int.rs  jxl.rs  kirikiri.rs  kirikiri.xp3.rs  lib.rs  lilim.aos.rs  lusterise.med.rs  main.rs  mpeg.rs  net.rs  nexas.pac.rs  ogg.rs  (+32 more)
