#  https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "shionn"
version = "0.4.4"
authors=["Yuno","tsubakii"]
edition = "2024"
# rust-version=1.88
description="A tool to see something"
documentation="docs/"
readme="README.md"
homepage="https://yunogal.github.io/shionn"
repository="https://github.com/Yunogal/shionn"
# license="AGPL"
license-file="LICENSE"
keywords=["galgame","acg","visualnovel","rust"]
categories=["cli"]
# workspace
build="build.rs"
# link
# include
# exclude
# publish
# metadata
# default-run="cargo run"

[lib]
name="shionn"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name="shionn"
path="src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
encoding_rs = "0.8.35"
flate2 = { version = "1.1.2", default-features = false, features = ["zlib"] }
memmap2 = "0.9.7"

[profile.release]
strip = true
opt-level = "z" # s or z
lto = true
codegen-units = 1
panic = "abort"
